myteo/test/parser/ast/if/unparenthesized_test_error.exp
ERROR: test/parser/ast/if/unparenthesized_test_error.myte:4:5 Unexpected token "test", expected "("
 4 |   if test {}
   |      ^^^^